--- a/css/style.css
+++ b/css/style.css
@@ -413,6 +413,7 @@ nav li:first-child{
     letter-spacing: 1px;
     text-shadow: 2px 2px 1px black;
     font-size: 1.5rem;
+    text-align: center;
 }
 #project .project-container .project-contents p{
     font-weight: 200;
